...
                                .minimumScaleFactor(0.5)
                        })
                        .measureFrame {
                            buttonFrame = $0
                        }
                        .buttonStyle(POSFilledButtonStyle(size: .normal, isLoading: isLoading))
                        .accessibilityIdentifier("pos-mark-payment-complete-button")
                        .frame(maxWidth: .infinity)
                        .dynamicTypeSize(...DynamicTypeSize.accessibility1)
                        .disabled(!isButtonEnabled)
                    }
                    .padding([.horizontal])
                    .padding(.bottom, bottomPadding)
...
