...
        }
        .scrollDisabled(shouldDisableScrolling)
        .measureHeight { height in
            scrollViewHeight = height
        }
        .frame(maxWidth: .infinity, maxHeight: .infinity)
        .accessibilityIdentifier("pos-ineligible-view")
    }

    private func suggestionBodyText(_ text: String) -> some View {
        Text(text)
            .font(POSFontStyle.posBodyLargeRegular().font())
            .multilineTextAlignment(.center)
...
